修复地图识别bug，加一坨 (#301)

--- a/autowsgr/data/map/normal/1-1.yaml
+++ b/autowsgr/data/map/normal/1-1.yaml
@@ -1,23 +1,9 @@
-'0':
-  position:
-  - 171
-  - 312
-  next:
-  - A
-A:
-  position:
-  - 283
-  - 282
-  next:
-  - B
-  - C
-B:
-  position:
-  - 390
-  - 177
-  next: []
-C:
-  position:
-  - 395
-  - 314
-  next: []
+A: !!python/tuple
+- 283
+- 282
+B: !!python/tuple
+- 390
+- 177
+C: !!python/tuple
+- 395
+- 314
