--- a/autowsgr/data/map/normal/1-5.yaml
+++ b/autowsgr/data/map/normal/1-5.yaml
@@ -1,11 +1,3 @@
-'0':
-  position:
-  - 353
-  - 365
-  next:
-  - A
-A:
-  position:
-  - 589
-  - 248
-  next: []
+A: !!python/tuple
+- 589
+- 248
