--- a/autowsgr/data/map/normal/4-3.yaml
+++ b/autowsgr/data/map/normal/4-3.yaml
@@ -1,56 +1,24 @@
-'0':
-  position:
-  - 832
-  - 180
-  next:
-  - A
-  - B
-A:
-  position:
-  - 750
-  - 270
-  next:
-  - C
-  - E
-B:
-  position:
-  - 622
-  - 138
-  next:
-  - D
-C:
-  position:
-  - 615
-  - 296
-  next:
-  - E
-  - G
-D:
-  position:
-  - 345
-  - 120
-  next:
-  - F
-E:
-  position:
-  - 487
-  - 281
-  next:
-  - G
-F:
-  position:
-  - 198
-  - 285
-  next: []
-G:
-  position:
-  - 356
-  - 277
-  next:
-  - F
-  - H
-H:
-  position:
-  - 153
-  - 457
-  next: []
+A: !!python/tuple
+- 750
+- 270
+B: !!python/tuple
+- 622
+- 138
+C: !!python/tuple
+- 615
+- 296
+D: !!python/tuple
+- 345
+- 120
+E: !!python/tuple
+- 487
+- 281
+F: !!python/tuple
+- 198
+- 285
+G: !!python/tuple
+- 356
+- 277
+H: !!python/tuple
+- 153
+- 457
