--- a/autowsgr/data/map/normal/6-1.yaml
+++ b/autowsgr/data/map/normal/6-1.yaml
@@ -1,79 +1,36 @@
-'0':
-  position:
-  - 671
-  - 472
-  next:
-  - A
-  - B
-  - C
-A:
-  position:
-  - 390
-  - 465
-  next:
-  - D
-B:
-  position:
-  - 525
-  - 352
-  next:
-  - E
-C:
-  position:
-  - 630
-  - 337
-  next:
-  - F
-D:
-  position:
-  - 232
-  - 367
-  next:
-  - G
-  - H
-E:
-  position:
-  - 390
-  - 367
-  next:
-  - D
-F:
-  position:
-  - 465
-  - 225
-  next:
-  - H
-  - I
-G:
-  position:
-  - 138
-  - 472
-  next: []
-H:
-  position:
-  - 247
-  - 225
-  next:
-  - J
-  - K
-  - L
-I:
-  position:
-  - 442
-  - 112
-  next: []
-J:
-  position:
-  - 82
-  - 315
-  next: []
-K:
-  position:
-  - 142
-  - 150
-  next: []
-L:
-  position:
-  - 330
-  - 97
-  next: []
+A: !!python/tuple
+- 390
+- 465
+B: !!python/tuple
+- 525
+- 352
+C: !!python/tuple
+- 630
+- 337
+D: !!python/tuple
+- 232
+- 367
+E: !!python/tuple
+- 390
+- 367
+F: !!python/tuple
+- 465
+- 225
+G: !!python/tuple
+- 138
+- 472
+H: !!python/tuple
+- 247
+- 225
+I: !!python/tuple
+- 442
+- 112
+J: !!python/tuple
+- 82
+- 315
+K: !!python/tuple
+- 142
+- 150
+L: !!python/tuple
+- 330
+- 97
