--- a/autowsgr/data/map/normal/7-1.yaml
+++ b/autowsgr/data/map/normal/7-1.yaml
@@ -1,92 +1,42 @@
-'0':
-  position:
-  - 832
-  - 352
-  next:
-  - A
-  - B
-A:
-  position:
-  - 712
-  - 420
-  next:
-  - C
-B:
-  position:
-  - 667
-  - 195
-  next:
-  - D
-  - E
-C:
-  position:
-  - 581
-  - 367
-  next:
-  - F
-  - G
-D:
-  position:
-  - 543
-  - 232
-  next:
-  - H
-E:
-  position:
-  - 600
-  - 105
-  next: []
-F:
-  position:
-  - 435
-  - 442
-  next:
-  - L
-G:
-  position:
-  - 435
-  - 330
-  next:
-  - I
-H:
-  position:
-  - 416
-  - 195
-  next:
-  - J
-  - K
-I:
-  position:
-  - 296
-  - 311
-  next:
-  - K
-  - M
-  - N
-J:
-  position:
-  - 232
-  - 120
-  next: []
-K:
-  position:
-  - 270
-  - 210
-  next:
-  - N
-L:
-  position:
-  - 273
-  - 461
-  next:
-  - M
-M:
-  position:
-  - 217
-  - 371
-  next: []
-N:
-  position:
-  - 90
-  - 270
-  next: []
+A: !!python/tuple
+- 712
+- 420
+B: !!python/tuple
+- 667
+- 195
+C: !!python/tuple
+- 581
+- 367
+D: !!python/tuple
+- 543
+- 232
+E: !!python/tuple
+- 600
+- 105
+F: !!python/tuple
+- 435
+- 442
+G: !!python/tuple
+- 435
+- 330
+H: !!python/tuple
+- 416
+- 195
+I: !!python/tuple
+- 296
+- 311
+J: !!python/tuple
+- 232
+- 120
+K: !!python/tuple
+- 270
+- 210
+L: !!python/tuple
+- 273
+- 461
+M: !!python/tuple
+- 217
+- 371
+N: !!python/tuple
+- 90
+- 270
