--- a/autowsgr/data/map/normal/8-1.yaml
+++ b/autowsgr/data/map/normal/8-1.yaml
@@ -1,80 +1,36 @@
-'0':
-  position:
-  - 110
-  - 152
-  next:
-  - A
-  - B
-A:
-  position:
-  - 220
-  - 237
-  next:
-  - C
-  - D
-B:
-  position:
-  - 311
-  - 128
-  next:
-  - E
-  - F
-C:
-  position:
-  - 280
-  - 370
-  next: []
-D:
-  position:
-  - 398
-  - 304
-  next:
-  - G
-  - H
-E:
-  position:
-  - 454
-  - 195
-  next:
-  - H
-F:
-  position:
-  - 551
-  - 131
-  next:
-  - I
-  - J
-G:
-  position:
-  - 530
-  - 454
-  next:
-  - K
-  - L
-H:
-  position:
-  - 593
-  - 360
-  next:
-  - L
-I:
-  position:
-  - 627
-  - 237
-  next:
-  - H
-J:
-  position:
-  - 753
-  - 152
-  next: []
-K:
-  position:
-  - 377
-  - 465
-  next: []
-L:
-  position:
-  - 786
-  - 381
-  next: []
+A: !!python/tuple
+- 220
+- 237
+B: !!python/tuple
+- 311
+- 128
+C: !!python/tuple
+- 280
+- 370
+D: !!python/tuple
+- 398
+- 304
+E: !!python/tuple
+- 454
+- 195
+F: !!python/tuple
+- 551
+- 131
+G: !!python/tuple
+- 530
+- 454
+H: !!python/tuple
+- 593
+- 360
+I: !!python/tuple
+- 627
+- 237
+J: !!python/tuple
+- 753
+- 152
+K: !!python/tuple
+- 377
+- 465
+L: !!python/tuple
+- 786
+- 381
