--- a/examples/ship_name.yaml
+++ b/examples/ship_name.yaml
@@ -1592,6 +1592,8 @@ No.1258: # 高波
   - "高波"
 No.1265: # 岚
   - "岚"
+No.1267: # 岛风(岛风型驱逐舰)
+  - "岛风"
 No.1269: # Z17
   - "Z17"
 No.1270: # Z18
@@ -1706,6 +1708,8 @@ No.1560: # 石勒苏益格-荷尔施泰因
   - "石勒苏益格-荷尔施泰因"
 No.1575: # 威武
   - "威武"
+No.1606: # 汉堡
+  - "汉堡"
 No.8007: # 提尔比茨
   - "提尔比茨"
 No.8009: # 萝德尼
