--- a/autowsgr/data/ocr/ship_name.yaml
+++ b/autowsgr/data/ocr/ship_name.yaml
@@ -1246,6 +1246,14 @@ No.625: # 卡萨尔
   - "卡萨尔"
 No.626: # 伊-17
   - "伊-17"
+No.627: # 奥里斯坎尼
+  - "奥里斯坎尼"
+No.628: # 长岛
+  - "长岛"
+No.629: # 桑加蒙
+  - "桑加蒙"
+No.630: # U-3008
+  - "U-3008"
 No.1001: # 胡德
   - "胡德"
 No.1002: # 扶桑
